src/objects/WEBError_Record_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Error_Condition__c</fullName>
        <label>Error Condition</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WEBError_Record__c</fullName>
        <label>WEBError Record</label>
        <referenceTo>WEBError_Record__c</referenceTo>
        <relationshipLabel>WEBError Record Details</relationshipLabel>
        <relationshipName>WEBError_Record_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WEBError Record Detail</label>
    <nameField>
        <displayFormat>WED-{DD}{MM}{YYYY}-{0000}</displayFormat>
        <label>WEBError Record Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WEBError Record Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>